部分配置，和前端联调

--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -1,6 +1,33 @@
 spring:
   application:
     name: gaokao-backend
+  datasource:
+    name: order
+    type: com.alibaba.druid.pool.DruidDataSource
+    driver-class-name: com.mysql.jdbc.Driver
+    # 数据库连接配置
+    url: jdbc:mysql://127.0.0.1:3306/gaokao?useUnicode=true&characterEncoding=utf-8&useSSL=false&allowMultiQueries=true
+    username: szw
+    password: 123456
+  mvc:
+    servlet:
+      path: /
 
 server:
   port: 3002
+
+logging:
+  level:
+    root: info
+
+mybatis-plus:
+  configuration:
+    log-impl: org.apache.ibatis.logging.stdout.StdOutImpl
+  global-config:
+    db-config:
+      # 字段上可不加 @TableLogic
+      logic-delete-field: is_delete
+      # 可以不写，默认就这样
+      logic-delete-value: 1
+      logic-not-delete-value: 0
+  mapper-locations: classpath:mapper/*.xml
