--- a/pom.xml
+++ b/pom.xml
@@ -8,7 +8,7 @@
 		<version>3.3.1</version>
 		<relativePath/> <!-- lookup parent from repository -->
 	</parent>
-	<groupId>com.szw</groupId>
+	<groupId>com.seu</groupId>
 	<artifactId>gaokao-backend</artifactId>
 	<version>0.0.1-SNAPSHOT</version>
 	<name>gaokao-backend</name>
