--- a/pom.xml
+++ b/pom.xml
@@ -80,7 +80,10 @@
 			<version>5.3.1</version>
 		</dependency>
 
-
+		<dependency>
+			<groupId>org.springframework.boot</groupId>
+			<artifactId>spring-boot-starter-webflux</artifactId>
+		</dependency>
 	</dependencies>
 
 	<build>
