--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -4,7 +4,7 @@ spring:
   datasource:
     name: order
     type: com.alibaba.druid.pool.DruidDataSource
-    driver-class-name: com.mysql.jdbc.Driver
+    driver-class-name: com.mysql.cj.jdbc.Driver
     # 数据库连接配置
     url: jdbc:mysql://127.0.0.1:3306/gaokao?useUnicode=true&characterEncoding=utf-8&useSSL=false&allowMultiQueries=true
     username: szw
